--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "change-case": "^3.0.2",
     "css-loader": "^0.28.11",
     "random-seed": "^0.3.0",
+    "shortid": "^2.2.8",
     "style-loader": "^0.20.3",
     "vue": "^2.5.16",
     "webpack": "^4.5.0",
