--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
     "serve": "webpack-serve",
     "build": "webpack --display-modules"
   },
-  "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.6",
-    "change-case": "^3.0.2",
+  "devDependencies": {
+    "@types/shortid": "^0.0.29",
     "css-loader": "^0.28.11",
-    "random-seed": "^0.3.0",
-    "shortid": "^2.2.8",
     "style-loader": "^0.20.3",
-    "vue": "^2.5.16",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.1",
+    "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-serve": "^0.3.1"
+  },
+  "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.6",
+    "change-case": "^3.0.2",
+    "random-seed": "^0.3.0",
+    "shortid": "^2.2.8",
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.2.0",
+    "vue-property-decorator": "^6.0.0"
   }
 }
